--- a/package.json
+++ b/package.json
@@ -49,7 +49,9 @@
     "babel-register": "^6.14.0",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
+    "chai-enzyme": "^0.6.1",
     "dirty-chai": "^1.2.2",
+    "enzyme": "^2.7.1",
     "eslint": "^3.5.0",
     "eslint-config-leankit": "^2.0.0",
     "eslint-plugin-babel": "^3.3.0",
@@ -68,6 +70,9 @@
     "sinon-chai": "^2.8.0"
   },
   "nyc": {
+    "exclude": [
+      "src/MousetrapWrapper.js"
+    ],
     "include": [
       "src/**/*.js"
     ],
