Added publishConfig to package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "type": "git",
     "url": "git+https://github.com/LeanKit-Labs/lux-keyboard.git"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "author": "LeanKit",
   "contributors": [
     {
