--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lux-keyboard",
-  "version": "3.0.0",
+  "version": "4.0.0-lodash4.0",
   "description": "React component + lux store utilities for managing contextual keyboard shortcut modes.",
   "main": "src/index.js",
   "scripts": {
