--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lux-keyboard",
   "version": "4.0.0",
   "description": "React component + lux store utilities for managing contextual keyboard shortcut modes.",
+  "license": "MIT",
   "main": "src/index.js",
   "scripts": {
     "lint": "eslint --fix ./",
@@ -9,7 +10,7 @@
     "cover:show": "open \"file://$PWD/coverage/index.html\"",
     "pretest": "npm run lint",
     "test": "npm run cover",
-    "test:only": "NODE_ENV=test mocha -r babel-register -R spec 'spec/**/*.spec.js' -r spec/node-setup.js",
+    "test:only": "NODE_ENV=test mocha 'spec/**/*.spec.js'",
     "test:watch": "npm run test:only -- -w"
   },
   "repository": {
@@ -40,31 +41,28 @@
     "node": ">=6.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015-without-strict": "0.0.4",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "chai": "^4.1.0",
-    "chai-as-promised": "^5.3.0",
-    "chai-enzyme": "^1.0.0-beta.0",
-    "dirty-chai": "^1.2.2",
-    "enzyme": "^3.1.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "eslint-config-leankit": "^4.0.0",
-    "event-emitter": "^0.3.4",
-    "jsdom": "^15.1.1",
-    "mocha": "^6.2.0",
-    "nyc": "^14.1.1",
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.14",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "core-js": "^3.9.1",
+    "dirty-chai": "^2.0.1",
+    "enzyme": "^3.11.0",
+    "eslint-config-leankit": "^6.0.0",
+    "jsdom": "^16.5.2",
+    "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "postal": "^2.0.4",
-    "proxyquire": "^1.7.10",
-    "react-dom": "^16.3.0",
-    "sinon": "^1.17.5",
-    "sinon-as-promised": "^4.0.2",
-    "sinon-chai": "^2.8.0"
+    "proxyquire": "^2.1.3",
+    "react-dom": "^17.0.2",
+    "regenerator-runtime": "^0.13.7",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0"
   },
   "nyc": {
     "exclude": [
@@ -75,15 +73,26 @@
     ],
     "all": true,
     "require": [
-      "babel-register"
+      "@babel/register"
     ],
     "sourceMap": true,
     "instrument": true
   },
+  "mocha": {
+    "require": [
+      "@babel/register",
+      "spec/pre-setup.js",
+      "spec/node-setup.js"
+    ],
+    "reporters": [
+      "spec"
+    ]
+  },
   "dependencies": {
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "lux.js": "^2.0.0",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.0"
+    "mousetrap": "^1.6.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.3.0 || ^17.0.2"
   }
 }
